<resources>
    <string name="app_name">Risolvi la Chimica</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="settingsbutton">settingsButton</string>
    <string name="capturebutton">captureButton</string>
    <string name="importbutton">importButton</string>
    <string name="inserire_la_reazione">Inserire la reazione da bilanciare:</string>
    <string name="inserisci_qui_la_tua_reazione">Inserisci qui la tua reazione</string>
    <string name="bilancia">Bilancia</string>
    <string name="applicazione">Applicazione</string>
</resources>